[feat] PIN 관리 전역 예외처리 적용